src/test/ui/error-codes/E0192.stderr
error[E0192]: invalid negative impl
  --> $DIR/E0192.rs:9:6
   |
LL | impl !Trait for Foo { }
   |      ^^^^^^
   |
   = note: negative impls are only allowed for auto traits, like `Send` and `Sync`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0192`.
